community/kio-extras: rebuild against Qt 5.14

--- a/community/kio-extras/APKBUILD
+++ b/community/kio-extras/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Bart Ribbers <bribbers@disroot.org>
 pkgname=kio-extras
 pkgver=19.12.2
-pkgrel=1
+pkgrel=2
 arch="all !armhf" # armhf blocked by extra-cmake-modules
 url="https://www.kde.org/applications/internet/"
 pkgdesc="Additional components to increase the functionality of KIO"
@@ -14,19 +14,12 @@ source="https://download.kde.org/stable/release-service/$pkgver/src/kio-extras-$
 subpackages="$pkgname-doc $pkgname-lang"
 options="!check" # Requires running dbus-server
 
-prepare() {
-	default_prepare
-
-	mkdir "$builddir"/build
-}
-
 build() {
-	cd "$builddir"/build
-	cmake "$builddir" \
+	cmake -B "$builddir"/build \
 		-DCMAKE_BUILD_TYPE=None \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_INSTALL_LIBDIR=lib
-	make
+	make -C build
 }
 
 check() {
@@ -35,8 +28,7 @@ check() {
 }
 
 package() {
-	cd "$builddir"/build
-	DESTDIR="$pkgdir" make install
+	DESTDIR="$pkgdir" make -C build install
 }
 
 sha512sums="4586ef6f26c1f6e4491c9afc653052a18eb39f80d616b9ca6059c91e2a1bbc093dfd1055bba8680a542dafd42ae6e0de3d65bc64df34215aa7507e3be66d904d  kio-extras-19.12.2.tar.xz"
