community/py3-qt5: upgrade to 5.14.1

--- a/community/py3-qt5/APKBUILD
+++ b/community/py3-qt5/APKBUILD
@@ -1,9 +1,8 @@
 # Contributor: Francesco Colista <fcolista@alpinelinux.org>
 # Maintainer: Francesco Colista <fcolista@alpinelinux.org>
 pkgname=py3-qt5
-_pkgname=PyQt5
-pkgver=5.13.1
-pkgrel=1
+pkgver=5.14.1
+pkgrel=0
 pkgdesc="A set of Python 3 bindings for the Qt toolkit"
 url="http://riverbankcomputing.co.uk/software/pyqt/intro"
 arch="all !armhf" # armhf blocked by qt5-qtdeclarative
@@ -15,8 +14,8 @@ makedepends="python3-dev py3-dbus-dev py-sip-dev
 	qt5-qtserialport-dev qt5-qtx11extras-dev qt5-qtdeclarative-dev
 	qt5-qtwebchannel-dev
 	"
-source="https://www.riverbankcomputing.com/static/Downloads/PyQt5/$pkgver/PyQt5_gpl-$pkgver.tar.gz"
-builddir="$srcdir/${_pkgname}_gpl-$pkgver"
+source="https://pypi.python.org/packages/source/P/PyQt5/PyQt5-$pkgver.tar.gz"
+builddir="$srcdir/PyQt5-$pkgver"
 
 prepare() {
 	default_prepare
@@ -42,4 +41,4 @@ package() {
 	make -j1 DESTDIR="$pkgdir" INSTALL_ROOT="$pkgdir" install
 }
 
-sha512sums="7b7001b16a8c730d7ff2d340fa1dd118868b53519e8f75e8c2ce00b44e3637ac6a31b41a7456fc610df11ff3928b924cb54c0c3712f22ed4df5058fd8bc77281  PyQt5_gpl-5.13.1.tar.gz"
+sha512sums="10b6abb6fdac64233041b0ee91c9f25cfd2a759ec5bde239c87ca9df8176cdd4fcabf6deb8db2dd9bbd911a040d5c476744f1b55aded9c66eb8b5182f99ddc86  PyQt5-5.14.1.tar.gz"
