community/plasma-framework: rebuild against Qt 5.14.1

--- a/community/plasma-framework/APKBUILD
+++ b/community/plasma-framework/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Bart Ribbers <bribbers@disroot.org>
 pkgname=plasma-framework
 pkgver=5.67.0
-pkgrel=1
+pkgrel=2
 pkgdesc="Plasma library and runtime components based upon KF5 and Qt5"
 arch="all !armhf" # armhf blocked by qt5-qtdeclarative
 url="https://community.kde.org/Frameworks"
@@ -14,20 +14,13 @@ source="https://download.kde.org/stable/frameworks/${pkgver%.*}/plasma-framework
 subpackages="$pkgname-dev $pkgname-doc $pkgname-lang"
 options="!check" # 8 out of 13 tests fail
 
-prepare() {
-	default_prepare
-
-	mkdir "$builddir"/build
-}
-
 build() {
-	cd "$builddir"/build
-	cmake "$builddir" \
+	cmake -B "$builddir"/build \
 		-DCMAKE_BUILD_TYPE=None \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_INSTALL_LIBDIR=lib \
 		-DBUILD_QCH=ON
-	make
+	make -C build
 }
 
 check() {
@@ -36,7 +29,6 @@ check() {
 }
 
 package() {
-	cd "$builddir"/build
-	DESTDIR="$pkgdir" make install
+	DESTDIR="$pkgdir" make -C build install
 }
 sha512sums="3708262501b39698a84656b1ec0ea461011369301c7e1f1e5858fdc5b3e06f4fd3a5d7511dba1f91e08e89b2331fcc3204561efd1e06440f97e6b4a32cbd8f92  plasma-framework-5.67.0.tar.xz"
