community/qqc2-desktop-style: rebuild against Qt 5.14.1

--- a/community/qqc2-desktop-style/APKBUILD
+++ b/community/qqc2-desktop-style/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Bart Ribbers <bribbers@disroot.org>
 pkgname=qqc2-desktop-style
 pkgver=5.67.0
-pkgrel=1
+pkgrel=2
 pkgdesc="A style for Qt Quick Controls 2 to make it follow your desktop theme"
 arch="all !armhf" # armhf blocked by qt5-qtdeclarative
 url="https://community.kde.org/Frameworks"
@@ -13,19 +13,12 @@ makedepends="$depends_dev extra-cmake-modules"
 source="https://download.kde.org/stable/frameworks/${pkgver%.*}/qqc2-desktop-style-$pkgver.tar.xz"
 subpackages="$pkgname-dev"
 
-prepare() {
-	default_prepare
-
-	mkdir "$builddir"/build
-}
-
 build() {
-	cd "$builddir"/build
-	cmake "$builddir" \
+	cmake -B "$builddir"/build \
 		-DCMAKE_BUILD_TYPE=None \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_INSTALL_LIBDIR=lib
-	make
+	make -C build
 }
 
 check() {
@@ -34,7 +27,6 @@ check() {
 }
 
 package() {
-	cd "$builddir"/build
-	DESTDIR="$pkgdir" make install
+	DESTDIR="$pkgdir" make -C build install
 }
 sha512sums="800ffbe33cf69987b90464d4f5a7cb08749919e1e202f6940ff8bd14fa440755dace100554e6bd056a5bd4bf8004945cc20f24b7a486d26dfdf03daffff0339f  qqc2-desktop-style-5.67.0.tar.xz"
