--- a/testing/snapper/APKBUILD
+++ b/testing/snapper/APKBUILD
@@ -1,32 +1,27 @@
 # Contributor: Francesco Colista <fcolista@alpinelinux.org>
 # Maintainer: Francesco Colista <fcolista@alpinelinux.org>
 pkgname=snapper
-pkgver=0.8.5
-pkgrel=1
+pkgver=0.8.9
+pkgrel=0
 pkgdesc="Manage filesystem snapshots and allow undo of system modifications"
-url="https://snapper.io"
-arch="all !armhf !armv7"  # armhf: fails to build
-license="GPL-2.0"
-# 3 tests are failing
-options="!check"
+url="http://snapper.io"
+arch="all"
+license="GPL-2.0-or-later"
+options="!check" # 5 tests failing - https://github.com/openSUSE/snapper/issues/526
 depends="dbus"
-makedepends="automake autoconf libtool bash
-	btrfs-progs-dev e2fsprogs-dev dbus-dev acl-dev
-	lvm2-dev libxml2-dev boost-dev bsd-compat-headers
-	boost-thread gettext-dev libxslt docbook-xsl"
+makedepends="acl-dev autoconf automake bash boost-dev
+	boost-thread bsd-compat-headers btrfs-progs-dev
+	dbus-dev docbook-xsl e2fsprogs-dev gettext-dev
+	libtool libxml2-dev libxslt lvm2-dev"
 subpackages="$pkgname-dev $pkgname-doc $pkgname-lang"
 source="$pkgname-$pkgver.tar.gz::https://github.com/openSUSE/snapper/archive/v$pkgver.tar.gz
 	musl-posix.patch
-	musl-mode_t.patch
 	musl-mktime.patch
 	musl-stdout_stderr.patch
 	musl-_nl_msg_cat_cntr.patch
-	musl-__isleap.patch
-	musl-types.patch
+	musl-u_int_type.patch
 	remove-systemd.patch
-	fix-poll_h.patch"
-
-builddir="$srcdir/$pkgname-$pkgver"
+	"
 
 prepare() {
 	default_prepare
@@ -41,7 +36,6 @@ prepare() {
 }
 
 build() {
-	cd "$builddir"
 	export LDFLAGS="$LDFLAGS -lintl"
 	./configure \
 		--build=$CBUILD \
@@ -52,29 +46,25 @@ build() {
 		--with-conf=/etc/conf.d \
 		--disable-pam \
 		--disable-zypp \
-		--disable-ext4
+		--disable-ext4 \
+		--disable-systemd
 	make
 }
 
 check() {
-	cd "$builddir"
 	make check
 }
 
 package() {
-	cd "$builddir"
 	make DESTDIR="$pkgdir" install
 
 	install -Dm644 data/sysconfig.snapper "$pkgdir"/etc/conf.d/$pkgname
 }
 
-sha512sums="1575d3443f816f888822f929f26b124cca7e4f67bf48171dd9345e3ebaf6c72599c8056464cbc38473649c312df97264d398689bea90bc86bfa147082f6463b4  snapper-0.8.5.tar.gz
+sha512sums="5a3e45839cd4b5e621425df2e1214ca5014a391d17b489fdf7d315e8ac9959741c1f6fcf7adf644276ed11488bc0f88fcfa563198bd78824867d267df204659d  snapper-0.8.9.tar.gz
 a9eec8105e94c4eb097aa293754b0de45420a297ad845933a7be66b3ff49af409dd427e9bd1de569c49982c619211d1e90183ed8bf8550acb0fa9d83176e22bf  musl-posix.patch
-ddcd279f77007fe905df27b904dc84c8c2eebf0cf42c9f992fdc992e2912ddaab59712c13a798243c4f81727c04ef8e0993773686ab0c682e41726a2bcad962b  musl-mode_t.patch
 ca59aaa4411abf51136b25ee8dd57fae6fc01ce21c36ac79811b4ed8b4352c5b396ce42b7c4c49d8679a9bef8375fe48b65c1ff84bbf1f192583f3b93dce1bd8  musl-mktime.patch
-ed393b476a679ebc8f130e34826958a30aa98dc7ac77c0c324a486cc3ed8539584552a305e2ddcb810626c6ab3478e634c77762395e2560abc935cd18e882beb  musl-stdout_stderr.patch
-d5305df362df7db3b882cb491d32d11f479d1d56b21a39bc5e0cbdf7cdf70341eb566e7374bb9acc6d4fa1db027d4f009857fed21ef48ed311efaaa1be7b6329  musl-_nl_msg_cat_cntr.patch
-8278c469def65e58cb2aee039882d1d237b4b404386472f9540da11a1d3cddd60dda08a99074f9f418b328ce2c4ac73d3190a74a6fe3e00eab9adb4fed87a4ec  musl-__isleap.patch
-8bc2b42bbee927ce88f77e71a9594da3b6e54e92008e5603c6d8db35b3ec37add456bcc52d7d6a913c69a395c73bd3f6a3934ea549d4cc0097cb65613f61ed48  musl-types.patch
-61401ac8e91b838231e018490af61e7fe8c954750eaff4a9ff4e435aea78531cfa2882e354cb088a3a43951d869bdf7c516969a437195362f700e655878bcd71  remove-systemd.patch
-2730b5d3d627e5d6140df1509a4676e4a8429f73a12804b88f0ef7dab46097f35ac209f3456bb0094a09843ebb810887a6392c3a6a308d27f43f2ea9621e586d  fix-poll_h.patch"
+5baf722996706146b62fd0a0d9b321496fb122e700af2d3dfd8272de2678f29c79bc2b1a03634b04aab3f226632dfdebc5674d3128737e85bcc71461e951d95b  musl-stdout_stderr.patch
+6f3324700cc697b29b2fe14e42eb765b4474bf7e582d8ea53122fe66e128d17584489c8e2adbfecc8aac37c683a9d4dc2a821e3ea0143334cd8b899164ba708c  musl-_nl_msg_cat_cntr.patch
+36bc62b09f1795c955de603e6faa92b640b772182f00e1c192edada9b327a7433a6541d62f2d77cf1c1c0f42958409d66f987f03db75a1140b0d17b77f666bc8  musl-u_int_type.patch
+4c843d204c5da81686d5b8b99708ec73dd504969cbd9189feeb3f69db95f15b96d242c010ad48afa7d5ca76ecbe3a0c806bc1af9ffb70a7945201fd12f3b3d3b  remove-systemd.patch"
