community/rawtherapee: upgrade to 5.8

--- a/community/rawtherapee/APKBUILD
+++ b/community/rawtherapee/APKBUILD
@@ -1,17 +1,16 @@
 # Contributor: ScrumpyJack <scrumpyjack@st.ilet.to>
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=rawtherapee
-pkgver=5.7
+pkgver=5.8
 pkgrel=0
 pkgdesc="Powerful cross-platform raw image processing program"
 url="https://rawtherapee.com"
-arch="x86 x86_64 ppc64le aarch64"
+arch="all !s390x" # Limited by librsvg which in turn is limited by rust
 license="GPL-3.0-or-later"
 makedepends="bzip2-dev cmake exiv2-dev expat-dev fftw-dev glib-dev gtk+3.0-dev
 	gtk-engines-dev gtkmm3-dev lcms2-dev lensfun-dev libcanberra-dev
 	libiptcdata-dev libjpeg-turbo-dev libpng-dev librsvg-dev libsigc++-dev
-	mercurial tiff-dev zlib-dev
-	"
+	mercurial tiff-dev zlib-dev"
 options="!check !strip"
 subpackages="$pkgname-doc $pkgname-dbg"
 source="https://rawtherapee.com/shared/source/rawtherapee-$pkgver.tar.xz"
@@ -19,9 +18,16 @@ source="https://rawtherapee.com/shared/source/rawtherapee-$pkgver.tar.xz"
 prepare() {
 	default_prepare
 	mkdir -p "$builddir"/build
-	export CXXFLAGS="$CXXFLAGS -std=c++11"
 	cd "$builddir"/build
-	cmake -DCMAKE_INSTALL_PREFIX=/usr ..
+	if [ "$CBUILD" != "$CHOST" ]; then
+		CMAKE_CROSSOPTS="-DCMAKE_SYSTEM_NAME=Linux -DCMAKE_HOST_SYSTEM_NAME=Linux"
+	fi
+	cmake \
+		-DCMAKE_BUILD_TYPE=None \
+		-DCMAKE_INSTALL_PREFIX=/usr \
+		-DCMAKE_CXX_FLAGS="$CXXFLAGS -std=c++11" \
+		-DCMAKE_C_FLAGS="$CFLAGS" \
+		${CMAKE_CROSSOPTS} ..
 }
 
 build() {
@@ -34,4 +40,4 @@ package() {
 	make DESTDIR="$pkgdir" install
 }
 
-sha512sums="8101ec66d9be4cab0c0b91336a3f83a32a6220a2f342f1c74d604c15686ee08bc7dbc090232916f13d5436957d800b64b284a8a9d3352f2f721266b07e005162  rawtherapee-5.7.tar.xz"
+sha512sums="bc79586cd937dcaefc053e65faa2162de887d514e44980956d937c157c6d55c4f6e6a7a9b8f91f2d657ed2054814737b96d5d741674c1e5a961d7177433efe4e  rawtherapee-5.8.tar.xz"
