testing/animatch: upgrade to 1.0.2

--- a/testing/animatch/APKBUILD
+++ b/testing/animatch/APKBUILD
@@ -1,9 +1,9 @@
 # Contributor: Bart Ribbers <bribbers@disroot.org>
 # Maintainer: Bart Ribbers <bribbers@disroot.org>
 pkgname=animatch
-pkgver=1.0.0
-pkgrel=1
-_commit_libsuperderpy="e9d645ecee0ff7f72c9b8f05b920289a26a20cdb"
+pkgver=1.0.2
+pkgrel=0
+_commit_libsuperderpy="b592a3382fd5d3efc88a0df29031e267f6497910"
 arch="all"
 url="https://gitlab.com/HolyPangolin/animatch"
 pkgdesc="Animatch is a match-three game with cute animals"
@@ -18,22 +18,19 @@ builddir="$srcdir/$pkgname-v$pkgver"
 prepare() {
 	default_prepare
 
-	mkdir "$builddir"/build
-
 	# libsuperderpy doesn't have a stable ABI yet so build it statically to prevent conflicts with other packages using it
 	rmdir "$builddir"/libsuperderpy
 	mv "$srcdir"/libsuperderpy-$_commit_libsuperderpy "$builddir"/libsuperderpy
 }
 
 build() {
-	cd "$builddir"/build
-	cmake "$builddir" \
+	cmake -B "$builddir"/build \
 		-DCMAKE_BUILD_TYPE=None \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DBUILD_SHARED_LIBS=OFF \
 		-DLIBSUPERDERPY_IMGUI=OFF \
 		-GNinja
-	ninja
+	ninja -C build
 }
 
 check() {
@@ -45,5 +42,5 @@ package() {
 	DESTDIR="$pkgdir" ninja -C build install
 }
 
-sha512sums="1076517ee332dd2b13f8f78054787aeaa60dafdc76c6455936e04f1509618ffb3954589809ab3afbe38b268570960445919ea856bf63bdc48eda92e5c602c267  animatch-v1.0.0.tar.gz
-70a035db24b15f44ae5feac8c8459c16f6c068d5e0f93e9ba37f2772597d32d0c37c61387abc0718efa85c3fa7afc2d7f70b3c2088f496fb2a01532b72bef25e  libsuperderpy-e9d645ecee0ff7f72c9b8f05b920289a26a20cdb.tar.gz"
+sha512sums="6eb052e4aabf43032fb229757f65ed01739a3ecad2037e354d14dbeb0f5e1c88ec00054b9976b91309b0ddc7efcd684f2f97f50ddb7d15c740058a47015310df  animatch-v1.0.2.tar.gz
+6fb917ebdd563f26475627ecd8f53d1fb59edb0a56965dff824178e41cbd53f8ea746289e491bddcd5cfbc091a047b4ca084af7a359e2aac4ae9c80093392071  libsuperderpy-b592a3382fd5d3efc88a0df29031e267f6497910.tar.gz"
