testing/chatty: upgrade to 0.1.7
Signed-off-by: Danct12 <danct12@disroot.org>

--- a/testing/chatty/APKBUILD
+++ b/testing/chatty/APKBUILD
@@ -1,13 +1,13 @@
 # Contributor: Bart Ribbers <bribbers@disroot.org>
 # Maintainer: Rasmus Thomsen <oss@cogitri.dev>
 pkgname=chatty
-pkgver=0.1.4
-pkgrel=1
+pkgver=0.1.7
+pkgrel=0
 pkgdesc="A phone dialer and call handler"
 arch="all !s390x" # Blocked by libhandy and evolution
 url="https://gitlab.gnome.org/Community/Purism/chatty"
 license="GPL-3.0-or-later"
-depends="purple-mm-sms"
+depends="libpurple-xmpp purple-mm-sms"
 makedepends="meson ninja gtk+3.0-dev pidgin-dev libhandy-dev evolution-dev libgee-dev folks-dev"
 source="$pkgname-$pkgver.tar.gz::https://source.puri.sm/Librem5/chatty/-/archive/v$pkgver/chatty-v$pkgver.tar.gz"
 subpackages="$pkgname-lang"
@@ -31,4 +31,4 @@ check() {
 package() {
 	DESTDIR="$pkgdir" ninja -C output install
 }
-sha512sums="d69af6412e15147adfabf877fcb03ed38b28b08194ee33572f532690de23ca7d3d6fb3732ab52f4271544657e53c04f211a22185b54fcb1b03f2b197897ff2f8  chatty-0.1.4.tar.gz"
+sha512sums="ac16f437b59c0939840e0cda3378a13b8d2704ab2eb21b10ba907f9d0349c1f0037c883356c31bf1f463ef0723acfca18510d9e96f0326d309ffa85ed268c36a  chatty-0.1.7.tar.gz"
