--- a/community/ripgrep/APKBUILD
+++ b/community/ripgrep/APKBUILD
@@ -5,7 +5,7 @@ pkgver=11.0.2
 pkgrel=1
 pkgdesc="ripgrep combines the usability of The Silver Searcher with the raw speed of grep"
 url="https://github.com/BurntSushi/ripgrep"
-arch="all !x86 !s390x" # limited by cargo, build fails on x86
+arch="all !s390x" # limited by cargo
 license="MIT public-domain"
 makedepends="cargo asciidoc pcre2-dev"
 checkdepends="xz"
