main/yeahconsole: modernize
makefile.patch - set prefix to /usr + add mkdir & DESTDIR to install
restarthidden.patch - add restartHidden resource option
x11.patch - fixes deprecated warning

--- a/main/yeahconsole/APKBUILD
+++ b/main/yeahconsole/APKBUILD
@@ -2,30 +2,28 @@
 # Maintainer: Johannes Matheis <jomat+alpinebuild@jmt.gr>
 pkgname=yeahconsole
 pkgver=0.3.4
-pkgrel=0
+pkgrel=1
 pkgdesc="Drop-down X terminal emulator wrapper"
 url="http://phrat.de/"
 arch="all"
-license="GPL-2.0"
-depends=""
-depends_dev=""
-makedepends="$depends_dev libx11-dev"
-install=""
-source="${url}${pkgname}-${pkgver}.tar.gz
-	yeahconsole-0.3.4-make.patch"
-
-builddir="$srcdir/$pkgname-$pkgver"
+license="GPL-2.0-or-later"
+options="!check" # No test suite
+makedepends="libx11-dev"
+source="http://phrat.de/yeahconsole-$pkgver.tar.gz
+	makefile.patch
+	restarthidden.patch
+	x11.patch
+	"
 
 build() {
-	cd "$builddir"
-	make PREFIX=${pkgdir}/usr || return 1
+	make
 }
 
 package() {
-	cd "$builddir"
-	mkdir -p $pkgdir'/usr/bin'
-	make PREFIX=${pkgdir}/usr install || return 1
+	make DESTDIR="$pkgdir" install
 }
 
 sha512sums="cba74d988b3cb991d95de1796e9e79b881fe011d4fc8d6aa1f863f4c465aadfd31250e57d36ce0118dfc367225c2861cf8e80ac47996c2718d83756a8e638ead  yeahconsole-0.3.4.tar.gz
-e78ace16e451fabe508ff9e6b691ae215b626a1b16868d44f958801c01278b15921cd8a187d454dd685a75eea8b798cd00e71ae024d83c43918104c43cf1a58f  yeahconsole-0.3.4-make.patch"
+1840c129c6a66b6d7d038b369cf33587a3760a584f7e94288897081f40e07562e87cb39b9767b937ba2fb613f931295fee0336c77ef3fa9aedeaa8498583736e  makefile.patch
+d0c5046f841a98e20aa290de6d09a7beb9e5c08afef89dee66e91c6e71b155887863c2d6c103fe585c804ee5c54999c4651c168f9ced46832b24298b665a70d6  restarthidden.patch
+675918d4634addf605ff7070c40b6c1364672ee6a87f68dcc6fd5cda40273675225899721545a0eb57977de620498cbe1b5b34a3a9d7af16ada1fbbcdb5cce07  x11.patch"
