--- a/main/yeahconsole/makefile.patch
+++ b/main/yeahconsole/makefile.patch
@@ -1,13 +1,14 @@
---- a/Makefile	2006-01-14 16:54:05.000000000 +0100
-+++ b/Makefile	2009-02-26 16:18:25.000000000 +0100
-@@ -1,6 +1,4 @@
+--- a/Makefile
++++ b/Makefile
+@@ -1,30 +1,28 @@
  TARGET = yeahconsole
 -CC = gcc
 -#CC = cc
  INSTALL = install
  
- PREFIX = /usr/local
-@@ -8,17 +6,16 @@
+-PREFIX = /usr/local
++PREFIX = /usr
+ 
  LIBS = -lX11 
  INCLUDES = -I/usr/X11R6/include 
  LIB_DIRS = -L/usr/X11R6/lib
@@ -28,3 +29,11 @@
  
  clean:
  	rm -rf $(TARGET) $(OBJECTS)
+ 
+ install: $(TARGET) $(MAN)
+-	$(INSTALL) -o root -g root -m 0755 $(TARGET) $(PREFIX)/bin
++	mkdir -p $(DESTDIR)$(PREFIX)/bin
++	$(INSTALL) -m 0755 $(TARGET) $(DESTDIR)$(PREFIX)/bin
+ 	
+ 
+ uninstall:
