main/keybinder: modernize

--- a/main/keybinder/APKBUILD
+++ b/main/keybinder/APKBUILD
@@ -2,46 +2,35 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=keybinder
 pkgver=0.3.0
-pkgrel=1
+pkgrel=2
 pkgdesc="A library for registering global keyboard shortcuts"
-url="http://kaizer.se/wiki/keybinder/"
+url="https://github.com/kupferlauncher/keybinder/tree/keybinder-legacy"
 arch="all"
-license="MIT"
-depends=""
-depends_dev="gtk+2.0-dev libxext-dev"
-makedepends="$depends_dev"
-install=""
+license="GPL-2.0-or-later"
+options="!check" # No test suite
+depends_dev="libxext-dev"
+makedepends="gtk+2.0-dev"
 subpackages="$pkgname-dev $pkgname-doc"
 source="https://dev.alpinelinux.org/archive/keybinder/keybinder-$pkgver.tar.gz"
 
-_builddir="$srcdir"/keybinder-$pkgver
 prepare() {
-	local i
-	cd "$_builddir"
-	update_config_sub || return 1
-	for i in $source; do
-		case $i in
-		*.patch) msg $i; patch -p1 -i "$srcdir"/$i || return 1;;
-		esac
-	done
+	default_prepare
+	update_config_sub
 }
 
 build() {
-	cd "$_builddir"
 	./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
 		--prefix=/usr \
 		--disable-static \
 		--disable-python \
-		--disable-lua \
-		|| return 1
-	make || return 1
+		--disable-lua
+	make
 }
 
 package() {
-	cd "$_builddir"
-	make DESTDIR="$pkgdir" install || return 1
+	make DESTDIR="$pkgdir" install
 }
 
 sha512sums="93ed88caa8246286907b9744383487391412b52be534cf085a6090c390bab181dc617721bb9216f29fd8314a40f65e27630d699ac6cb1657e0641a3d472eb22e  keybinder-0.3.0.tar.gz"
