main/nfs-utils: upgrade to 2.4.3

--- a/main/nfs-utils/APKBUILD
+++ b/main/nfs-utils/APKBUILD
@@ -1,26 +1,23 @@
 # Contributor: Carlo Landmeter <clandmeter@gmail.com>
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=nfs-utils
-pkgver=2.4.1
-pkgrel=2
+pkgver=2.4.3
+pkgrel=0
 pkgdesc="kernel-mode NFS"
-url="http://linux-nfs.org"
+url="https://linux-nfs.org/"
 arch="all"
-license="GPL-2.0+, BSD-3-Clause"
+license="GPL-2.0-or-later BSD-3-Clause"
 depends="rpcbind"
 options="suid"
-makedepends="util-linux-dev libtirpc-dev libcap-dev libevent-dev
-	keyutils-dev lvm2-dev krb5-dev sqlite-dev
-	autoconf automake libtool bsd-compat-headers openldap-dev"
+makedepends="autoconf automake bsd-compat-headers keyutils-dev krb5-dev
+	libcap-dev libevent-dev libtirpc-dev libtool lvm2-dev musl-libintl
+	openldap-dev sqlite-dev util-linux-dev"
 subpackages="$pkgname-dev $pkgname-doc $pkgname-dbg $pkgname-openrc rpcgen
 	libnfsidmap libnfsidmap-ldap"
-source="https://www.kernel.org/pub/linux/utils/nfs-utils/$pkgver/nfs-utils-$pkgver.tar.gz
-
-	nfs-utils-mtab-sym.patch
+source="https://www.kernel.org/pub/linux/utils/nfs-utils/$pkgver/nfs-utils-$pkgver.tar.xz
 	musl-configure_ac.patch
 	musl-getservbyport.patch
 	musl-svcgssd-sysconf.patch
-	limits.patch
 
 	nfs.initd
 	nfsmount.initd
@@ -35,16 +32,13 @@ source="https://www.kernel.org/pub/linux/utils/nfs-utils/$pkgver/nfs-utils-$pkgv
 	nfsclient.initd
 	nfsclient.confd
 	"
-builddir="$srcdir/$pkgname-$pkgver"
 
 prepare() {
 	default_prepare
-	cd $builddir
 	./autogen.sh
 }
 
 build() {
-	cd $builddir
 	./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
@@ -59,25 +53,24 @@ build() {
 		--enable-uuid \
 		--enable-gss \
 		--enable-svcgss \
-		--enable-libmount-mount
+		--enable-libmount-mount \
+		--enable-static=no
 	make
 }
 
-# Simple test, `make check` requires running nfsd
+# Simple test, "make check" requires running nfsd
 check() {
-	cd $builddir
 	./utils/showmount/showmount -v
 }
 
 package() {
-	cd $builddir
 	make -j1 DESTDIR="$pkgdir" install
 	install -Dm644 "$srcdir"/nfs.exports "$pkgdir"/etc/exports
 	mv "$pkgdir"/usr/sbin/rpc.statd "$pkgdir"/sbin/
 
-	local file=
+	local file
 	for file in $source; do
-		case "${file}" in
+		case "$file" in
 		*.confd) install -Dm644 "$srcdir"/"$file" \
 			"$pkgdir"/etc/conf.d/${file%.*} ;;
 		*.initd) install -Dm755 "$srcdir"/"$file" \
@@ -118,12 +111,10 @@ ldap() {
 	mv "$pkgdir"/usr/lib/libnfsidmap/*ldap* "$subpkgdir"/usr/lib/libnfsidmap/
 }
 
-sha512sums="5f1e301de0bd75a12ff501e20784fe316553c162872fac08ccdc91d33abae91037e2c56abf49ea05149f2dd17ef7c623c6e5bdc0ec0600212bd510aeccbbe1da  nfs-utils-2.4.1.tar.gz
-674ecf2c4bc8e9364ddd0f34cc03c96674753494cbc5a5d157bd70ed4342ff90356c3e85c544510648dbe90cb43b7fd83ba50653bddffc4b3b5550367b6d0b8e  nfs-utils-mtab-sym.patch
-99609058351733dc9d02bd90156ded96bb04924b7c00c07be485e06f60d5fb77d1dbc4deca7d9fb88c5bb8fe96c483c5ec5a8fac26ca61fd351304def79b057d  musl-configure_ac.patch
+sha512sums="260359f06c1114915a96ee2a593137b02e24db03a414d8d52dadbccb272f7272cb2907e3877c824c80a5c9efeba09f5493c2c9144ef17e43e24c22b9e97cd605  nfs-utils-2.4.3.tar.xz
+3f245b1870a47998d90cee191dba528dede7d2e18abad3f045864f95039057cda5a22708d89fcc086eeed452729c397a0284c73c1c7037277943a9890504e250  musl-configure_ac.patch
 94d7ba23164660f1da9298494dff75c57f5a300cb32b2922bc2226fcdaded7eaaa0c50a59a145ac7c75639d177558b5f5594fb1f03a50f60f4c577c93b135748  musl-getservbyport.patch
 52eeade44753f2002bf99d58ad4982086aab74ef8b14de46be547f23508197f58a6ff529145f96de7f031ac0bb7779b648d05fd981cdd91556dd13d068dfe57b  musl-svcgssd-sysconf.patch
-9647d8f4a64a95a7abf5e26f040cf5567670e2194ce307a971a36eaae7fe490af5a494e7b380a48c88e309f4c25777d73d6c140b224aeed829fbc46b1d0baa64  limits.patch
 f7feb79cfcab0478affb640d1e5ad059757c88d51cc790fd54cde2fd7ed2e3cfd8f7f4c2de993d99da03e8ce3bdfb2750a4cb997b850fe33d0ef76d9b91c9018  nfs.initd
 89259b9f0878658d48792b5b2f42b43c966ed098dba1fecf9e07fb0de4aab37ad67655ea8dbcc2361ddab2b5013b2de35a03048a513aaeedf790e4b416a35a54  nfsmount.initd
 6e23897885cc33c49d9c7353b456585a1e0c7300822edba81bc48ba4ccc18297adce137260cc0aa9487aa5ef0aab3eecf931532cfa5bd40fd03bc9e0ddacfb28  nfsmount.confd
