--- a/community/connman/APKBUILD
+++ b/community/connman/APKBUILD
@@ -2,8 +2,8 @@
 # Contributor: Valery Kartel <valery.kartel@gmail.com>
 pkgname=connman
 pkgver=1.38
-pkgrel=1
-pkgdesc="A daemon for managing internet connections"
+pkgrel=2
+pkgdesc="Daemon for managing internet connections"
 url="https://01.org/connman"
 arch="all"
 license="GPL-2.0-only"
@@ -46,4 +46,4 @@ package() {
 
 sha512sums="9c8f77c4dd62763ccb9ea5cc5d285a8a1c51bb09a82eafc73246231557a4f627ae1e5e4a9df5e104457390ebba643349d7d67800a4ee4c17c6dceff192afe8d4  connman-1.38.tar.xz
 122b48fc9e25354e25ba3a3e0864bdd84da84457fed94aeea726bcb189b2f05f2cc361ae15f44af5c49bcee572e91e4c0488ef3b0bc79d20f6efe15853fb6b3a  libresolv.patch
-42b45d44f5eed966ba003683fcb54ffb4e9a0331599ff1c8e5e64c4c06b42d380c3852b7c73881a1be1eaca887906cac9aede1f5579e8e139fdf90ca8d7adf15  connman.initd"
+b0676714b3952f38d50f3707c3ec72269902dd07f3cefc412c2720d91d02c9537f2823eb4ed5359650eaa64b9132cddba3abc15fd68542ff0870de653e023ed8  connman.initd"
