main/zfs: upgrade to 0.8.3
fixes #11195

--- a/main/zfs/APKBUILD
+++ b/main/zfs/APKBUILD
@@ -1,15 +1,16 @@
 # Contributor: Carlo Landmeter <clandmeter@gmail.com>
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=zfs
-pkgver=0.8.2
-pkgrel=1
+pkgver=0.8.3
+pkgrel=0
 pkgdesc="ZFS for Linux"
 url="http://zfsonlinux.org"
 arch="all !armhf !armv7"
 license="CDDL-1.0"
 provides="spl" # Mitigate upgrade conflicts
 depends_dev="attr-dev e2fsprogs-dev glib-dev libtirpc-dev openssl-dev util-linux-dev"
-makedepends="$depends_dev automake autoconf libtool linux-headers python3-dev py3-cffi"
+makedepends="$depends_dev automake autoconf libtool linux-headers python3-dev py3-cffi
+	py3-setuptools"
 options="!check" # need to be run on live system w/ ZFS loaded.
 subpackages="$pkgname-dev $pkgname-doc $pkgname-openrc $pkgname-libs $pkgname-dracut::noarch
 	$pkgname-udev $pkgname-scripts $pkgname-utils-py:utils_py:noarch py3-pyzfs:pyzfs:noarch"
@@ -21,7 +22,6 @@ prepare() {
 }
 
 build() {
-	cd "$builddir"
 	export LIBS="$LIBS -lintl"
 	./configure --prefix=/usr \
 		--with-tirpc \
@@ -39,7 +39,6 @@ build() {
 }
 
 package() {
-	cd "$builddir"
 	make DESTDIR="$pkgdir" install
 	rm -rf "$pkgdir"/usr/share/initramfs-tools
 	mv "$pkgdir"/usr/share/pkgconfig "$pkgdir"/usr/lib/
@@ -80,4 +79,4 @@ pyzfs() {
 	mv "$pkgdir"/usr/lib/python* "$subpkgdir"/usr/lib
 }
 
-sha512sums="1424b1a030b814f812b5da422100669db5b8c3ccae14c2fdd62a5e0df28e7255247fe5ca99c95a14f08c92cc1574c22dd132093e4a1dd81e38c95b10cc5e2496  zfs-0.8.2.tar.gz"
+sha512sums="aded632e6b04180560d4f2ff283260016e883dadae4e7fda9070b7113dee948099cb7a7b183f1c8139654389a2610fb9cc6f997acdc846040e605125cf016010  zfs-0.8.3.tar.gz"
