community/gnuchess: drop uclibc patch

--- a/community/gnuchess/APKBUILD
+++ b/community/gnuchess/APKBUILD
@@ -8,13 +8,9 @@ url="https://www.gnu.org/software/chess/"
 arch="all"
 license="GPL-3.0-or-later"
 subpackages="$pkgname-doc"
-source="https://ftp.gnu.org/gnu/chess/gnuchess-$pkgver.tar.gz
-	uclibc.patch
-	"
-builddir="$srcdir/$pkgname-$pkgver"
+source="https://ftp.gnu.org/gnu/chess/gnuchess-$pkgver.tar.gz"
 
 build() {
-	cd "$builddir"
 	./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
@@ -27,9 +23,7 @@ build() {
 }
 
 package() {
-	cd "$builddir"
 	make DESTDIR="$pkgdir" install
 }
 
-sha512sums="f3f65a85eb4c93f6f10c7058bde7ee7f4a48c2f465b24a7cc0d5bcafe4df186b434ce23bf8c032d012efffba39c6c3c60ada484ff22d87114ce2be5dd0da6835  gnuchess-6.2.5.tar.gz
-3f42fdcccfeab43f2e47ae599aee19a76a9e4b6af41f68456d30d8520fb410c689f2d56aae06c0588bea9b38e5aa508fb992cfc913906b6e5911d7f9d60bd9fc  uclibc.patch"
+sha512sums="f3f65a85eb4c93f6f10c7058bde7ee7f4a48c2f465b24a7cc0d5bcafe4df186b434ce23bf8c032d012efffba39c6c3c60ada484ff22d87114ce2be5dd0da6835  gnuchess-6.2.5.tar.gz"
