community/lxterminal: modernize

--- a/community/lxterminal/APKBUILD
+++ b/community/lxterminal/APKBUILD
@@ -9,14 +9,13 @@ arch="all"
 license="GPL-2.0-or-later"
 makedepends="gtk+3.0-dev intltool vte3-dev"
 subpackages="$pkgname-doc $pkgname-lang"
-source="https://downloads.sourceforge.net/lxde/$pkgname-$pkgver.tar.xz"
+source="https://downloads.sourceforge.net/lxde/lxterminal-$pkgver.tar.xz"
 
 # secfixes:
 #   0.3.0-r1:
 #     - CVE-2016-10369
 
 build() {
-	cd "$builddir"
 	./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
@@ -30,12 +29,10 @@ build() {
 }
 
 check() {
-	cd "$builddir"
 	make -C src check
 }
 
 package() {
-	cd "$builddir"
 	make DESTDIR="$pkgdir" install
 }
 
