community/herbstluftwm: modernize

--- a/community/herbstluftwm/APKBUILD
+++ b/community/herbstluftwm/APKBUILD
@@ -14,7 +14,7 @@ subpackages="$pkgname-doc
 	$pkgname-fish-completion:fishcomp:noarch
 	$pkgname-zsh-completion:zshcomp:noarch
 	"
-source="https://herbstluftwm.org/tarballs/$pkgname-$pkgver.tar.gz"
+source="https://herbstluftwm.org/tarballs/herbstluftwm-$pkgver.tar.gz"
 
 build() {
 	make COLOR=0 PREFIX=/usr DESTDIR="$pkgdir"
