community/xvinfo: modernize

--- a/community/xvinfo/APKBUILD
+++ b/community/xvinfo/APKBUILD
@@ -8,12 +8,9 @@ arch="all"
 license="MIT"
 subpackages="$pkgname-doc"
 makedepends="libxv-dev"
-depends=
-source="https://www.x.org/releases/individual/app/$pkgname-$pkgver.tar.bz2"
+source="https://www.x.org/releases/individual/app/xvinfo-$pkgver.tar.bz2"
 
-builddir="$srcdir/$pkgname-$pkgver"
 build() {
-	cd "$builddir"
 	./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
@@ -23,7 +20,6 @@ build() {
 }
 
 package() {
-	cd "$builddir"
 	make DESTDIR="$pkgdir" install
 }
 
