community/xev: modernize

--- a/community/xev/APKBUILD
+++ b/community/xev/APKBUILD
@@ -8,13 +8,9 @@ arch="all"
 license="MIT"
 subpackages="$pkgname-doc"
 makedepends="libx11-dev libxrandr-dev"
-depends=
-source="https://www.x.org/releases/individual/app/$pkgname-$pkgver.tar.bz2"
-
-builddir="$srcdir/$pkgname-$pkgver"
+source="https://www.x.org/releases/individual/app/xev-$pkgver.tar.bz2"
 
 build() {
-	cd "$builddir"
 	./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
@@ -24,7 +20,6 @@ build() {
 }
 
 package() {
-	cd "$builddir"
 	make DESTDIR="$pkgdir" install
 }
 
