--- a/community/xhost/APKBUILD
+++ b/community/xhost/APKBUILD
@@ -7,13 +7,10 @@ url="http://xorg.freedesktop.org/"
 arch="all"
 license="MIT"
 subpackages="$pkgname-doc"
-depends=
 makedepends="libx11-dev libxmu-dev libxau-dev util-macros"
-source="https://www.x.org/releases/individual/app/$pkgname-$pkgver.tar.bz2"
+source="https://www.x.org/releases/individual/app/xhost-$pkgver.tar.bz2"
 
-builddir="$srcdir/$pkgname-$pkgver"
 build() {
-	cd "$builddir"
 	./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
@@ -23,12 +20,10 @@ build() {
 }
 
 check() {
-	cd "$builddir"
 	make check
 }
 
 package() {
-	cd "$builddir"
 	make DESTDIR="$pkgdir" install
 }
 
