--- a/community/twm/APKBUILD
+++ b/community/twm/APKBUILD
@@ -8,16 +8,12 @@ url="http://www.x.org"
 arch="all"
 license="MIT"
 options="!check"  # No test suite.
-depends=""
-depends_dev=""
-makedepends="$depends_dev bison util-macros libxext-dev libx11-dev libxt-dev
-	libice-dev libxmu-dev"
-install=""
+makedepends="bison util-macros libxext-dev libx11-dev libxt-dev libice-dev
+	libxmu-dev"
 subpackages="$pkgname-doc"
-source="https://www.x.org/releases/individual/app/${pkgname}-${pkgver}.tar.bz2"
+source="https://www.x.org/releases/individual/app/twm-$pkgver.tar.bz2"
 
 build() {
-	cd "$builddir"
 	./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
@@ -27,7 +23,6 @@ build() {
 }
 
 package() {
-	cd "$builddir"
 	make DESTDIR="$pkgdir" install
 }
 
