community/lxdm: modernize

--- a/community/lxdm/APKBUILD
+++ b/community/lxdm/APKBUILD
@@ -4,29 +4,26 @@ pkgver=0.5.3
 pkgrel=2
 pkgdesc="LXDE desktop login manager"
 url="https://wiki.lxde.org/en/LXDM"
+arch="all"
 license="GPL-3.0-or-later"
 depends="bash"
 makedepends="gtk+2.0-dev consolekit2-dev autoconf automake libtool intltool
 	linux-headers"
 subpackages="$pkgname-lang $pkgname-openrc"
-source="https://downloads.sourceforge.net/lxdm/$pkgname-$pkgver.tar.xz
+source="https://downloads.sourceforge.net/lxdm/lxdm-$pkgver.tar.xz
 	execinfo.patch
 	fix-msghdr-usage.patch
 	background.png
 	lxdm.initd
-	index.theme.alpine"
-arch="all"
-
+	index.theme.alpine
+	"
 
 prepare() {
-	cd "$builddir"
 	default_prepare
-	libtoolize --force && aclocal && autoheader && autoconf \
-		&& automake --add-missing
+	autoreconf -fi
 }
 
 build() {
-	cd "$builddir"
 	./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
@@ -39,7 +36,6 @@ build() {
 }
 
 package() {
-	cd "$builddir"
 	make DESTDIR="$pkgdir" DATADIRNAME=share install
 
 	sed -i -e "s:^greeter=.*:greeter=/usr/lib/lxdm/lxdm-greeter-gtk:" \
@@ -65,5 +61,5 @@ sha512sums="0e3539c595a71cb850c1756dd075b8d477a4e111a4167714057cac06650e9587f338
 b66d47a3c026f84c76fb6ae0701ff69d2736a2c0fdf898191836c0c5e2b0d624c7a7846cd38596ee800fab53ebcd843c26779c56c0f655df1659ecc5b251b576  execinfo.patch
 1eaf438e64901168a557d3e278de4dd7eb4e580594175a26f9c8d27bd8de2dae81467ebd3a96f0a4dfb5f19c2257ce1ee5608e753e8d9d53c2e4ba488f798b0e  fix-msghdr-usage.patch
 89640deb308d4f4f22f664096992a99cc03eab39ca5caa690422611fb724c8f245795ae80260cf8b9cb75e3dddf7877ec3aa0670885e01530facc2628cf84ee0  background.png
-6d271f27f67dfcb88df676e35a97cb0413e6d4039327045036da45d6a68188041dc240e4339840e7b05f77bf80666891ce327ddcf8217b66f032d62aacec8ad6  lxdm.initd
+e5884270ecd530e2e3d1880cfe24aaf74cadba4b5756383ae12548c3e75b4d969373b05f038e8d817d38658552b2c98fccd3722cf2c83fe3f9113f7c67e6015b  lxdm.initd
 1374daa94bde0fb71056cebc8524da32b57c241a8af97501daa930c43dc087aa3fec2d79f10ceab5a73a4dcf9cce478fb77575d7019cafd54ad9731c9e9dd55f  index.theme.alpine"
