community/php7-pecl-event: upgrade to 2.5.4

--- a/community/php7-pecl-event/APKBUILD
+++ b/community/php7-pecl-event/APKBUILD
@@ -2,8 +2,8 @@
 # Maintainer: Andy Postnikov <apostnikov@gmail.com>
 pkgname=php7-pecl-event
 _pkgname=event
-pkgver=2.5.3
-pkgrel=1
+pkgver=2.5.4
+pkgrel=0
 pkgdesc="PHP extension that provides interface to libevent library - PECL"
 url="https://pecl.php.net/package/event"
 arch="all"
@@ -16,27 +16,23 @@ provides="php7-event=$pkgver-r$pkgrel" # for backward compatibility
 replaces="php7-event" # for backward compatibility
 
 build() {
-	cd "$builddir"
-
 	phpize7
 	./configure --prefix=/usr --with-php-config=php-config7
 	make
 }
 
 check() {
-	cd "$builddir"
 	# Tests require sockets extension which is not bundled
-	sed -i 's#PHP_TEST_SHARED_EXTENSIONS =  `#PHP_TEST_SHARED_EXTENSIONS = -d extension=/usr/lib/php7/modules/sockets.so `#' Makefile
-	make NO_INTERACTION=1 REPORT_EXIT_STATUS=1 SKIP_ONLINE_TESTS=1 test
+	make NO_INTERACTION=1 REPORT_EXIT_STATUS=1 SKIP_ONLINE_TESTS=1 test PHP_TEST_SHARED_EXTENSIONS=" \
+		-d extension=/usr/lib/php7/modules/sockets.so \
+		-d extension=modules/$_pkgname.so"
 }
 
 package() {
-	cd "$builddir"
-
 	make INSTALL_ROOT="$pkgdir" install
 
 	install -d "$pkgdir"/etc/php7/conf.d
 	echo "extension=$_pkgname.so" > "$pkgdir"/etc/php7/conf.d/$_pkgname.ini
 }
 
-sha512sums="359eee2f501444f444904ee1960d85af0b77259e59a06d9c6ae1ec008f7bda9bda5bf999d437d84416150a965466519c04e4c2f36dbca44367075fcbb46cd917  php7-pecl-event-2.5.3.tgz"
+sha512sums="1bf5f9e510ec648ab3cccc798ede032e8e1545d9ef210131f72f5c346a51b6d7ffee425714cd4d3f241d146c34863e4ba99abeefc689c162c22e8773590dd1b2  php7-pecl-event-2.5.4.tgz"
