community/fluxbox: modernize

--- a/community/fluxbox/APKBUILD
+++ b/community/fluxbox/APKBUILD
@@ -10,10 +10,9 @@ license="MIT"
 subpackages="$pkgname-doc"
 makedepends="libxinerama-dev libxpm-dev libxrandr imlib2-dev libxrender-dev
 	libxrandr-dev freetype-dev libxft-dev xorgproto"
-source="https://downloads.sourceforge.net/sourceforge/$pkgname/$pkgname-$pkgver.tar.bz2"
+source="https://downloads.sourceforge.net/sourceforge/fluxbox/fluxbox-$pkgver.tar.bz2"
 
 build() {
-	cd "$builddir"
 	./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
@@ -24,7 +23,6 @@ build() {
 }
 
 package() {
-	cd "$builddir"
 	make DESTDIR="$pkgdir" install
 }
 
