community/dmenu: modernize

--- a/community/dmenu/APKBUILD
+++ b/community/dmenu/APKBUILD
@@ -7,14 +7,10 @@ pkgdesc="Dynamic menu for X"
 url="https://tools.suckless.org/dmenu/"
 arch="all"
 license="MIT"
-depends=""
-depends_dev=""
 makedepends="libx11-dev libxinerama-dev libxft-dev"
-install=""
 options="!check"
 subpackages="$pkgname-doc"
-source="https://dl.suckless.org/tools/$pkgname-$pkgver.tar.gz"
-builddir="$srcdir"/$pkgname-$pkgver
+source="https://dl.suckless.org/tools/dmenu-$pkgver.tar.gz"
 
 prepare() {
 	default_prepare
