--- a/community/dwm/APKBUILD
+++ b/community/dwm/APKBUILD
@@ -8,13 +8,10 @@ url="https://dwm.suckless.org"
 arch="all"
 license="MIT/X"
 depends="dmenu st"
-depends_dev=""
 makedepends="libxft-dev libx11-dev libxinerama-dev"
-install=""
 subpackages="$pkgname-doc"
-source="https://dl.suckless.org/$pkgname/$pkgname-$pkgver.tar.gz"
+source="https://dl.suckless.org/dwm/dwm-$pkgver.tar.gz"
 
-builddir="$srcdir"/$pkgname-$pkgver
 prepare() {
 	default_prepare
 	sed -i -e '/CFLAGS/{s/-Os//;s/=/+=/}' \
