community/recordmydesktop: modernize

--- a/community/recordmydesktop/APKBUILD
+++ b/community/recordmydesktop/APKBUILD
@@ -5,8 +5,7 @@ pkgrel=2
 pkgdesc="Produces a OGG encapsulated Theora/Vorbis recording of your desktop"
 url="http://recordmydesktop.sourceforge.net"
 arch="all"
-license="GPL"
-depends=""
+license="GPL-2.0-or-later"
 makedepends="alsa-lib-dev zlib-dev libvorbis-dev libxdamage-dev libxext-dev
 	libtheora-dev libsm-dev autoconf automake libtool"
 subpackages="$pkgname-doc"
@@ -17,32 +16,21 @@ source="https://downloads.sourceforge.net/recordmydesktop/recordmydesktop-$pkgve
 	automake.patch
 	"
 
-_builddir="$srcdir"/$pkgname-$pkgver
 prepare() {
-	cd "$_builddir"
-	update_config_sub || return 1
-	for i in $source; do
-		case $i in
-		*.patch) msg $i; patch -p1 -i "$srcdir"/$i || return 1;;
-		esac
-	done
-	libtoolize --force && aclocal && autoconf \
-		&& automake --add-missing || return 1
+	default_prepare
+	autoreconf -fi
 }
 
 build() {
-	cd "$_builddir"
 	./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
 		--prefix=/usr \
-		--disable-jack \
-		|| return 1
+		--disable-jack
 }
 
 package() {
-	cd "$_builddir"
-	make DESTDIR="$pkgdir" install || return 1
+	make DESTDIR="$pkgdir" install
 }
 
 sha512sums="a32df1257d7d8928123437b38abcbdf623a9a65d313df5bec9bc06ef7229ebe4664a3cbea1fe5f6f1f9b89efb939873adc020f4ac072477f6df9481a37e7c350  recordmydesktop-0.3.8.1.tar.gz
