testing/clojure: update url to use https

--- a/testing/clojure/APKBUILD
+++ b/testing/clojure/APKBUILD
@@ -2,9 +2,9 @@
 # Maintainer: Will Sinatra <wpsinatra@gmail.com>
 pkgname=clojure
 pkgver=1.10.1
-pkgrel=1
+pkgrel=2
 pkgdesc="The Clojure Programming Language"
-url="http://clojure.org"
+url="https://clojure.org"
 arch="all !armv7 !armhf !x86"
 license="EPL-1.0"
 makedepends="maven"
