community/xfontsel: modernize

--- a/community/xfontsel/APKBUILD
+++ b/community/xfontsel/APKBUILD
@@ -7,16 +7,11 @@ pkgdesc="Point and click selection of X11 font names"
 url="http://xorg.freedesktop.org"
 arch="all"
 license="MIT"
-depends=""
-depends_dev=""
 makedepends="libxaw-dev libxmu-dev libxt-dev libx11-dev"
-install=""
 subpackages="$pkgname-doc"
-source="https://www.x.org/archive/individual/app/$pkgname-$pkgver.tar.bz2"
+source="https://www.x.org/archive/individual/app/xfontsel-$pkgver.tar.bz2"
 
-builddir="$srcdir"/$pkgname-$pkgver
 build() {
-	cd "$builddir"
 	./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
@@ -28,7 +23,6 @@ build() {
 }
 
 package() {
-	cd "$builddir"
 	make DESTDIR="$pkgdir" install
 }
 
