--- a/community/xdpyinfo/APKBUILD
+++ b/community/xdpyinfo/APKBUILD
@@ -8,25 +8,19 @@ arch="all"
 license="custom"
 subpackages="$pkgname-doc"
 makedepends="libxtst-dev"
-depends=
-source="https://www.x.org/releases/individual/app/$pkgname-$pkgver.tar.bz2"
-
-builddir="$srcdir/$pkgname-$pkgver"
+source="https://www.x.org/releases/individual/app/xdpyinfo-$pkgver.tar.bz2"
 
 build() {
-	cd "$builddir"
 	./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
 		--prefix=/usr \
-		--mandir=/usr/share/man \
-		|| return 1
-	make || return 1
+		--mandir=/usr/share/man
+	make
 }
 
 package() {
-	cd "$builddir"
-	make DESTDIR="$pkgdir" install || return 1
+	make DESTDIR="$pkgdir" install
 }
 
 sha512sums="2c9097c13778c7a7fe5a9b3ee04b28512ff6028231eca91ecdf6104c742be470678920d37a4f540fece7e39dccbea34802271f359ab80618027b2856c8912e7d  xdpyinfo-1.3.2.tar.bz2"
