--- a/community/xgamma/APKBUILD
+++ b/community/xgamma/APKBUILD
@@ -7,25 +7,19 @@ url="http://xorg.freedesktop.org/"
 arch="all"
 license="custom"
 subpackages="$pkgname-doc"
-depends=
 makedepends="libx11-dev libxxf86vm-dev"
-source="https://www.x.org/releases/individual/app/$pkgname-$pkgver.tar.bz2"
-
-builddir="$srcdir/$pkgname-$pkgver"
+source="https://www.x.org/releases/individual/app/xgamma-$pkgver.tar.bz2"
 
 build() {
-	cd "$builddir"
 	./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
 		--prefix=/usr \
-		--mandir=/usr/share/man \
-		|| return 1
-	make || return 1
+		--mandir=/usr/share/man
+	make
 }
 
 package() {
-	cd "$builddir"
-	make DESTDIR="$pkgdir" install || return 1
+	make DESTDIR="$pkgdir" install
 }
 sha512sums="2d41798e15ac8c6f6731a2da29589207d936eaee1223ce6f3ca948e67d63c5c8b955d11c7db092dcd8c66a6209bd15c1de3dc1446dad4b4277134f010c6fc47a  xgamma-1.0.6.tar.bz2"
