--- a/community/xsetroot/APKBUILD
+++ b/community/xsetroot/APKBUILD
@@ -7,13 +7,10 @@ url="http://xorg.freedesktop.org"
 arch="all"
 license="MIT"
 subpackages="$pkgname-doc"
-depends=""
 makedepends="libx11-dev libxmu-dev libxcursor-dev xbitmaps util-macros"
-source="https://www.x.org/releases/individual/app/$pkgname-$pkgver.tar.bz2"
-builddir="$srcdir/$pkgname-$pkgver"
+source="https://www.x.org/releases/individual/app/xsetroot-$pkgver.tar.bz2"
 
 build() {
-	cd "$builddir"
 	./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
@@ -29,7 +26,6 @@ check() {
 }
 
 package() {
-	cd "$builddir"
 	make DESTDIR="$pkgdir" install
 }
 
