--- a/community/xsetmode/APKBUILD
+++ b/community/xsetmode/APKBUILD
@@ -7,29 +7,24 @@ url="http://xorg.freedesktop.org/"
 arch="all"
 license="custom"
 subpackages="$pkgname-doc"
-depends=
 makedepends="libxi-dev libx11-dev"
-source="https://www.x.org/releases/individual/app/$pkgname-$pkgver.tar.bz2"
+source="https://www.x.org/releases/individual/app/xsetmode-$pkgver.tar.bz2"
 
-_builddir="$srcdir"/$pkgname-$pkgver
 prepare() {
-	cd "$_builddir"
-	update_config_sub || return 1
+	default_prepare
+	update_config_sub
 }
 
 build() {
-	cd "$_builddir"
 	./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
 		--prefix=/usr \
-		--mandir=/usr/share/man \
-		|| return 1
-	make || return 1
+		--mandir=/usr/share/man
+	make
 }
 
 package() {
-	cd "$_builddir"
-	make DESTDIR="$pkgdir" install || return 1
+	make DESTDIR="$pkgdir" install
 }
 sha512sums="a3c1c5e85a0cec35a7db10a57eece07691c0bec79b93987ec4417ebf71544ddffbb4832f78ef524bfcd149beb9852295a2de6a2ccec481cd6eea5633e090abfb  xsetmode-1.0.0.tar.bz2"
