--- a/community/xrefresh/APKBUILD
+++ b/community/xrefresh/APKBUILD
@@ -7,13 +7,10 @@ url="http://xorg.freedesktop.org"
 arch="all"
 license="MIT"
 subpackages="$pkgname-doc"
-depends=
 makedepends="libx11-dev"
-source="https://www.x.org/releases/individual/app/$pkgname-$pkgver.tar.bz2"
-builddir="$srcdir/$pkgname-$pkgver"
+source="https://www.x.org/releases/individual/app/xrefresh-$pkgver.tar.bz2"
 
 build() {
-	cd "$builddir"
 	./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
@@ -23,7 +20,6 @@ build() {
 }
 
 package() {
-	cd "$builddir"
 	make DESTDIR="$pkgdir" install
 }
 
