--- a/community/xdg-utils/APKBUILD
+++ b/community/xdg-utils/APKBUILD
@@ -11,13 +11,11 @@ license="MIT"
 depends="xset xprop"
 makedepends="libxml2-utils libxslt xmlto lynx"
 subpackages="$pkgname-doc"
-source="https://portland.freedesktop.org/download/$pkgname-$pkgver.tar.gz
+source="https://portland.freedesktop.org/download/xdg-utils-$pkgver.tar.gz
 	xdg-screensaver-mv-T.patch
 	"
-builddir="$srcdir"/$pkgname-$pkgver
 
 build() {
-	cd "$builddir"
 	./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
@@ -29,7 +27,6 @@ build() {
 }
 
 package() {
-	cd "$builddir"
 	make DESTDIR="$pkgdir" install
 }
 
