community/xset: modernize

--- a/community/xset/APKBUILD
+++ b/community/xset/APKBUILD
@@ -8,12 +8,10 @@ url="http://xorg.freedesktop.org"
 arch="all"
 license="MIT"
 subpackages="$pkgname-doc"
-depends=""
 makedepends="libxmu-dev libx11-dev libxext-dev util-macros"
-source="https://www.x.org/releases/individual/app/$pkgname-$pkgver.tar.bz2"
+source="https://www.x.org/releases/individual/app/xset-$pkgver.tar.bz2"
 
 build() {
-	cd "$builddir"
 	./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
@@ -29,7 +27,6 @@ check() {
 }
 
 package() {
-	cd "$builddir"
 	make DESTDIR="$pkgdir" install
 }
 
