community/xautolock: modernize

--- a/community/xautolock/APKBUILD
+++ b/community/xautolock/APKBUILD
@@ -7,36 +7,21 @@ pkgdesc="An automatic X screen-locker/screen-saver"
 url="ftp://ibiblio.org/pub/Linux/X11/screensavers/"
 arch="all"
 license="GPL-2.0"
-depends=""
 depends_dev="imake xorg-server-dev libxscrnsaver-dev xorg-cf-files"
 makedepends="$depends_dev"
-install=""
 subpackages="$pkgname-doc"
 source="https://www.ibiblio.org/pub/linux/X11/screensavers/xautolock-$pkgver.tgz
 	processwait.patch"
 
-_builddir="$srcdir/$pkgname-$pkgver"
-prepare() {
-   local i
-   cd "$_builddir"
-   for i in $source; do
-       case $i in
-       *.patch) msg $i; patch -p0 -i "$srcdir"/$i || return 1;;
-       esac
-   done
-}
-
 build() {
-   cd "$_builddir"
-   xmkmf
-   make || return 1
+	xmkmf
+	make
 }
 
 package() {
-   cd "$_builddir"
-   make DESTDIR="$pkgdir" install
-   make MANPATH=/usr/share/man DESTDIR="$pkgdir" install.man
+	make DESTDIR="$pkgdir" install
+	make MANPATH=/usr/share/man DESTDIR="$pkgdir" install.man
 }
 
 sha512sums="5f9dcc25cda706610e77a74235c4b421ca3a833d154b1a269057f0774579e1c6ec36fe0e5be5fadd6942ce8c1640a760f891397586b162e6024b524635153d04  xautolock-2.2.tgz
-006398a2d73a5b7441536badf933f9764394ca0d09dc9659d4a6ad04c95619d7e57030bf1010a16a7732dd90449af5a23571c8834efeb323ebb91d004da0e8ed  processwait.patch"
+6dd8dc41ac78b71cd7b3dfe33cec3dfd7b57d0860da558cb230310a6d37f6b5075b11fe584d6f8d520da294f70688a04edb80e95d9fa0369230bab7292c05415  processwait.patch"
