community/xbacklight: modernize

--- a/community/xbacklight/APKBUILD
+++ b/community/xbacklight/APKBUILD
@@ -8,10 +8,9 @@ arch="all"
 license="MIT"
 subpackages="$pkgname-doc"
 makedepends="libx11-dev libxrandr-dev xcb-util-wm-dev"
-source="https://www.x.org/releases/individual/app/$pkgname-$pkgver.tar.bz2"
+source="https://www.x.org/releases/individual/app/xbacklight-$pkgver.tar.bz2"
 
 build() {
-	cd "$builddir"
 	./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
@@ -21,7 +20,6 @@ build() {
 }
 
 package() {
-	cd "$builddir"
 	make DESTDIR="$pkgdir" install
 }
 
