testing/php7-maxminddb: add missing dependency on php7-bcmath

--- a/testing/php7-maxminddb/APKBUILD
+++ b/testing/php7-maxminddb/APKBUILD
@@ -3,12 +3,12 @@
 pkgname=php7-maxminddb
 _pkgreal=MaxMind-DB-Reader-php
 pkgver=1.6.0
-pkgrel=0
+pkgrel=1
 pkgdesc="PHP7 MaxMind DB Reader extension"
 url="https://github.com/maxmind/MaxMind-DB-Reader-php"
 arch="all"
 license="Apache-2.0"
-depends="php7-common"
+depends="php7-bcmath"
 makedepends="libmaxminddb-dev php7-dev"
 source="$pkgname-$pkgver.tar.gz::https://github.com/maxmind/MaxMind-DB-Reader-php/archive/v$pkgver.tar.gz"
 builddir="$srcdir"/$_pkgreal-$pkgver/ext
