--- a/community/rxvt-unicode/APKBUILD
+++ b/community/rxvt-unicode/APKBUILD
@@ -14,14 +14,12 @@ depends="$pkgname-terminfo"
 makedepends="libx11-dev libxft-dev ncurses fontconfig-dev
 	gdk-pixbuf-dev libxrender-dev perl-dev startup-notification-dev"
 subpackages="$pkgname-doc $pkgname-terminfo::noarch"
-source="http://dist.schmorp.de/rxvt-unicode/$pkgname-$pkgver.tar.bz2
+source="http://dist.schmorp.de/rxvt-unicode/rxvt-unicode-$pkgver.tar.bz2
 	gentables.patch
-	rxvt-unicode-kerning.patch"
-
-builddir="${srcdir}/${pkgname}-${pkgver}"
+	rxvt-unicode-kerning.patch
+	"
 
 build() {
-	cd "$builddir"
 	./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
