--- a/community/galculator/APKBUILD
+++ b/community/galculator/APKBUILD
@@ -1,40 +1,31 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=galculator
 pkgver=2.1.4
-pkgrel=0
+pkgrel=1
 pkgdesc="GTK+ based scientific calculator"
 url="http://galculator.mnim.org/"
 arch="all"
-license="GPL"
-depends=
+license="GPL-2.0-or-later"
 makedepends="gtk+2.0-dev flex bison"
 subpackages="$pkgname-doc $pkgname-lang"
 source="http://galculator.mnim.org/downloads/galculator-$pkgver.tar.bz2"
 
-_builddir="$srcdir/galculator-$pkgver"
 prepare() {
-	cd "$_builddir"
-	update_config_sub || return 1
-	for i in $source; do
-		case $i in
-		*.patch) msg $i; patch -p1 -i "$srcdir"/$i || return 1;;
-		esac
-	done
+	default_prepare
+	update_config_sub
 }
 
 build() {
-	cd "$_builddir"
 	./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
 		--prefix=/usr \
-		--disable-gtk3 \
-		|| return 1
-	make || return 1
+		--disable-gtk3
+	make
 }
 
 package() {
 	cd "$srcdir/galculator-$pkgver"
-	make DESTDIR="$pkgdir" install || return 1
+	make DESTDIR="$pkgdir" install
 }
 sha512sums="ca5f373649d9bf26184e94ba6a501610efbb13e92a8723cda78b83aa495519e82e5b4fcd17f00f615eb702ed186598aecc70ae63a8238c32384b7f608cba4cfa  galculator-2.1.4.tar.bz2"
