--- a/main/pekwm/APKBUILD
+++ b/main/pekwm/APKBUILD
@@ -1,39 +1,27 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=pekwm
 pkgver=0.1.17
-pkgrel=3
+pkgrel=4
 pkgdesc="Fast & Light Window Manager"
 url="http://pekwm.org/projects/pekwm"
 arch="all"
-license="GPL"
-depends=
+license="GPL-2.0-or-later"
 makedepends="libx11-dev libpng-dev libxpm-dev libxrender-dev libxrandr-dev"
-install=
 subpackages="$pkgname-doc"
-source="https://launchpad.net/ubuntu/+archive/primary/+files/${pkgname}_$pkgver.orig.tar.bz2"
-
-_builddir="$srcdir"/$pkgname-$pkgver
-
-prepare() {
-	cd "$_builddir"
-	# apply patches here
-}
+source="https://launchpad.net/ubuntu/+archive/primary/+files/pekwm_$pkgver.orig.tar.bz2"
 
 build() {
-	cd "$_builddir"
 	./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
 		--prefix=/usr \
 		--sysconfdir=/etc \
 		--mandir=/usr/share/man \
-		--infodir=/usr/share/info \
-		|| return 1
-	make || return 1
+		--infodir=/usr/share/info
+	make
 }
 
 package() {
-	cd "$_builddir"
 	make DESTDIR="$pkgdir" install
 }
 
