--- a/community/glamor-egl/APKBUILD
+++ b/community/glamor-egl/APKBUILD
@@ -7,26 +7,12 @@ pkgdesc="X.org glamor library"
 url="https://www.freedesktop.org/wiki/Software/Glamor"
 arch="all"
 license="MIT"
-depends=""
 depends_dev="mesa-dev"
 makedepends="$depends_dev xorg-server-dev"
-install=""
 subpackages="$pkgname-dev"
 source="https://www.x.org/releases/individual/driver/glamor-egl-$pkgver.tar.bz2"
 
-_builddir="$srcdir"/glamor-egl-$pkgver
-prepare() {
-	local i
-	cd "$_builddir"
-	for i in $source; do
-		case $i in
-		*.patch) msg $i; patch -p1 -i "$srcdir"/$i || return 1;;
-		esac
-	done
-}
-
 build() {
-	cd "$_builddir"
 	./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
@@ -35,14 +21,12 @@ build() {
 		--mandir=/usr/share/man \
 		--infodir=/usr/share/info \
 		--localstatedir=/var \
-		--disable-static \
-		|| return 1
-	make || return 1
+		--disable-static
+	make
 }
 
 package() {
-	cd "$_builddir"
-	make DESTDIR="$pkgdir" install || return 1
+	make DESTDIR="$pkgdir" install
 }
 
 sha512sums="aa3a88e85ae069e487c88a1839c21b0404c5a2a343a63f2c1d71ffb8d86288eb42dfcb30c8cce4c417b361417e9fae7c1cdabadc07ad40bb97c995c410dc0c1b  glamor-egl-0.6.0.tar.bz2"
