community/libxres: modernize

--- a/community/libxres/APKBUILD
+++ b/community/libxres/APKBUILD
@@ -10,13 +10,10 @@ options="!check"  # No test suite.
 subpackages="$pkgname-dev $pkgname-doc"
 depends_dev="xorgproto"
 makedepends="$depends_dev libx11-dev libxext-dev util-macros"
-source="https://www.x.org/releases/individual/lib/libXres-$pkgver.tar.bz2
-	"
-
+source="https://www.x.org/releases/individual/lib/libXres-$pkgver.tar.bz2"
 builddir="$srcdir"/libXres-$pkgver
 
 build() {
-	cd "$builddir"
 	./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
@@ -26,7 +23,6 @@ build() {
 }
 
 package() {
-	cd "$builddir"
 	make DESTDIR="$pkgdir" install
 	install -D -m644 COPYING "$pkgdir"/usr/share/licenses/$pkgname/LICENSE
 }
