--- a/community/qt5-qttools/APKBUILD
+++ b/community/qt5-qttools/APKBUILD
@@ -10,7 +10,7 @@ pkgdesc="Qt5 - QtTool components"
 url="https://www.qt.io/developers/"
 arch="all"
 license="(LGPL-2.0-or-later OR GPL-3.0-only OR GPL-2.0-or-later) AND Qt-GPL-exception-1.0 AND GFDL-1.3-or-later"
-makedepends="qt5-qtbase-dev"
+makedepends="qt5-qtbase-dev vulkan-headers"
 subpackages="$pkgname-static $pkgname-dev qt5-assistant:_assistant qt5-qdbusviewer:_dbusviewer"
 
 case $pkgver in
