--- a/community/xbitmaps/APKBUILD
+++ b/community/xbitmaps/APKBUILD
@@ -8,10 +8,9 @@ arch="noarch"
 license="MIT"
 options="!check"  # No test suite.
 depends="util-macros"
-source="https://www.x.org/releases/individual/data/$pkgname-$pkgver.tar.bz2"
+source="https://www.x.org/releases/individual/data/xbitmaps-$pkgver.tar.bz2"
 
 build() {
-	cd "$builddir"
 	./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
@@ -20,7 +19,6 @@ build() {
 }
 
 package() {
-	cd "$builddir"
 	make DESTDIR="$pkgdir" install
 
 	mkdir -p "$pkgdir"/usr/lib
