--- a/community/gnome-common/APKBUILD
+++ b/community/gnome-common/APKBUILD
@@ -2,21 +2,18 @@
 # Maintainer: Francesco Colista <fcolista@alpinelinux.org>
 pkgname=gnome-common
 pkgver=3.18.0
-pkgrel=1
+pkgrel=2
 pkgdesc="Common development macros for GNOME"
 url="https://www.gnome.org"
 arch="noarch"
-license="GPL"
+license="LGPL-2.1-or-later"
 source="https://download.gnome.org/sources/gnome-common/${pkgver%.*}/gnome-common-$pkgver.tar.xz"
-builddir="$srcdir"/gnome-common-$pkgver
 
 check() {
-	cd "$builddir"
 	make check
 }
 
 build() {
-	cd "$builddir"
 	./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
@@ -29,7 +26,6 @@ build() {
 }
 
 package() {
-	cd "$builddir"
 	make DESTDIR="$pkgdir" install
 }
 
