community/freeglut: modernize, fix license=

--- a/community/freeglut/APKBUILD
+++ b/community/freeglut/APKBUILD
@@ -2,19 +2,18 @@
 # Maintainer:
 pkgname=freeglut
 pkgver=3.2.1
-pkgrel=1
+pkgrel=2
 pkgdesc="free reimplementation of OpenGL Utility Toolkit (GLUT) library"
 url="http://freeglut.sourceforge.net/"
 arch="all"
 options="!check"  # No test suite.
-license="Custom"
+license="MIT"
 depends_dev="mesa-dev libx11-dev libice-dev libxxf86vm-dev libxi-dev glu-dev"
 makedepends="$depends_dev cmake"
-subpackages="$pkgname-dev $pkgname-doc"
+subpackages="$pkgname-dev"
 source="https://downloads.sourceforge.net/freeglut/freeglut-$pkgver.tar.gz"
 
 build() {
-	cd "$builddir"
 	cmake . \
 		-DCMAKE_BUILD_TYPE=None \
 		-DCMAKE_INSTALL_PREFIX=/usr \
@@ -24,10 +23,7 @@ build() {
 }
 
 package() {
-	cd "$builddir"
 	make DESTDIR="$pkgdir" install
-
-	install -m644 -D COPYING "$pkgdir"/usr/share/licenses/$pkgname/COPYING
 
 	# Symlink glut.pc to freeglut.pc for backwards compatibility
 	ln -s glut.pc "$pkgdir"/usr/lib/pkgconfig/freeglut.pc
