community/st: modernize

--- a/community/st/APKBUILD
+++ b/community/st/APKBUILD
@@ -10,12 +10,10 @@ license="MIT"
 depends="ncurses-terminfo"
 makedepends="fontconfig-dev freetype-dev libx11-dev libxext-dev libxft-dev"
 subpackages="$pkgname-doc $pkgname-dbg"
-source="https://dl.suckless.org/$pkgname/$pkgname-$pkgver.tar.gz"
-builddir="$srcdir/$pkgname-$pkgver"
+source="https://dl.suckless.org/st/st-$pkgver.tar.gz"
 
 prepare() {
 	default_prepare
-	cd "$builddir"
 	sed -i '/tic/d' Makefile
 }
 
@@ -24,8 +22,6 @@ build() {
 }
 
 package() {
-	cd "$builddir"
-
 	make install PREFIX=/usr DESTDIR="$pkgdir"
 	mkdir -p "$pkgdir"/usr/share/applications
 
