--- a/community/mp3splt-gtk/APKBUILD
+++ b/community/mp3splt-gtk/APKBUILD
@@ -7,41 +7,29 @@ pkgdesc="Gtk frontend for mp3splt"
 url="http://mp3splt.sourceforge.net/"
 arch="all"
 license="GPL-2.0-or-later"
-depends=""
 makedepends="gtk+3.0-dev gst-plugins-base-dev libmp3splt-dev
-			autoconf automake libtool"
-install=""
+	autoconf automake libtool"
 subpackages="$pkgname-doc $pkgname-lang"
-source="https://prdownloads.sourceforge.net/mp3splt/$pkgname-$pkgver.tar.gz"
+source="https://prdownloads.sourceforge.net/mp3splt/mp3splt-gtk-$pkgver.tar.gz"
 
-_builddir="$srcdir"/$pkgname-$pkgver
 prepare() {
-	local i
-	cd "$_builddir"
-	update_config_sub || return 1
-	for i in $source; do
-		case $i in
-		*.patch) msg $i; patch -p1 -i "$srcdir"/$i || return 1;;
-		esac
-	done
+	default_prepare
+	update_config_sub
 }
 
 build() {
-	cd "$_builddir"
 	./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
 		--prefix=/usr \
 		--disable-gnome \
-		--disable-audacious \
-		|| return 1
+		--disable-audacious
 	sed -i -e 's/-DGTK_DISABLE_DEPRECATED//' Makefile src/Makefile
-	make || return 1
+	make
 }
 
 package() {
-	cd "$_builddir"
-	make DESTDIR="$pkgdir" install || return 1
+	make DESTDIR="$pkgdir" install
 }
 
 sha512sums="e837cbc0759cd6535fc466099a170d066ab72b4854f8546f524261fe660887f5d2add60d9fa1e19d68d811004c682a324b5bcba86aa8cb89ae1ad2bc2f9b1d9d  mp3splt-gtk-0.9.2.tar.gz"
