--- a/community/startup-notification/APKBUILD
+++ b/community/startup-notification/APKBUILD
@@ -1,25 +1,22 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=startup-notification
 pkgver=0.12
-pkgrel=3
+pkgrel=4
 pkgdesc="Monitor and display application startup"
-url="http://www.freedesktop.org"
+url="https://www.freedesktop.org/wiki/Software/startup-notification"
 arch="all"
-license="LGPL"
+license="LGPL-2.0-or-later"
 subpackages="$pkgname-dev"
-depends=
-makedepends="libx11-dev libsm-dev xcb-util-dev"
-source="https://www.freedesktop.org/software/$pkgname/releases/$pkgname-$pkgver.tar.gz"
-
 depends_dev="libsm-dev xcb-util-dev"
+makedepends="$depends_dev libx11-dev"
+source="https://www.freedesktop.org/software/startup-notification/releases/startup-notification-$pkgver.tar.gz"
 
 prepare() {
-	cd "$builddir"
+	default_prepare
 	update_config_sub
 }
 
 build() {
-	cd "$builddir"
 	./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
@@ -30,12 +27,10 @@ build() {
 }
 
 check() {
-	cd "$builddir"
 	make check
 }
 
 package() {
-	cd "$builddir"
 	make DESTDIR="$pkgdir" install
 }
 sha512sums="ea1246acdb50dafd9ced9914ec3c8f0d499c0ca3cfd447b43a444c768a6e9ea7135e5c42d9ca0089354698ac235bd86d42f12c70a3a17c9c79f998c07461f7ab  startup-notification-0.12.tar.gz"
