--- a/community/mrxvt/APKBUILD
+++ b/community/mrxvt/APKBUILD
@@ -2,33 +2,25 @@
 # Maintainer: Mark Constable <markc@renta.net>
 pkgname=mrxvt
 pkgver=0.5.4
-pkgrel=7
+pkgrel=8
 pkgdesc="A multi-tabbed X terminal emulator based on rxvt code"
 url="http://materm.sourceforge.net/wiki/pmwiki.php"
 arch="all"
-license="GPL"
+license="GPL-2.0-or-later"
 makedepends="libpng-dev libjpeg-turbo-dev libxft-dev libxpm-dev libx11-dev"
 subpackages="$pkgname-doc"
-source="
-	https://downloads.sourceforge.net/sourceforge/materm/$pkgname-$pkgver.tar.gz
+source="https://downloads.sourceforge.net/sourceforge/materm/mrxvt-$pkgver.tar.gz
 	mrxvt-0.5.4-002-fix-segfault-when-wd-empty.patch
 	musl-fix-includes.patch
 	mrxvt.desktop
 	"
 
-_builddir="$srcdir"/$pkgname-$pkgver
 prepare() {
-	cd "$_builddir"
-	update_config_sub || return 1
-	for i in $source; do
-		case $i in
-		*.patch) msg $i; patch -p1 -i "$srcdir"/$i || return 1;;
-		esac
-	done
+	default_prepare
+	update_config_sub
 }
 
 build() {
-	cd "$_builddir"
 	 ./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
@@ -47,14 +39,12 @@ build() {
 		--enable-greek \
 		--enable-cjk \
 		--enable-backspace-key \
-		--with-save-lines=2048 \
-		|| return 1
-	make || return 1
+		--with-save-lines=2048
+	make
 }
 
 package() {
-	cd "$_builddir"
-	make DESTDIR=$pkgdir install || return 1
+	make DESTDIR=$pkgdir install
 	install -Dm644 ../mrxvt.desktop $pkgdir/usr/share/applications/mrxvt.desktop
 
 }
