community/gtkspell: modernize

--- a/community/gtkspell/APKBUILD
+++ b/community/gtkspell/APKBUILD
@@ -8,16 +8,14 @@ arch="all"
 license="GPL-2.0-only"
 makedepends="gtk+2.0-dev enchant-dev intltool"
 subpackages="$pkgname-dev $pkgname-doc $pkgname-lang"
-source="http://$pkgname.sourceforge.net/download/$pkgname-$pkgver.tar.gz"
+source="http://gtkspell.sourceforge.net/download/gtkspell-$pkgver.tar.gz"
 
 prepare() {
-	cd "$builddir"
 	update_config_sub
 	default_prepare
 }
 
 build() {
-	cd "$builddir"
 	./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
@@ -26,12 +24,10 @@ build() {
 }
 
 check() {
-	cd "$builddir"
 	make check
 }
 
 package() {
-	cd "$builddir"
 	make DESTDIR="$pkgdir" install
 }
 
