--- a/community/gtksourceview2/APKBUILD
+++ b/community/gtksourceview2/APKBUILD
@@ -1,40 +1,36 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=gtksourceview2
 pkgver=2.10.5
-pkgrel=0
+pkgrel=1
 pkgdesc="A text widget adding syntax highlighting and more to GNOME"
 url="http://live.gnome.org/GtkSourceView"
 arch="all"
-license="GPL"
+license="LGPL-2.1-or-later"
 replaces="gtksourceview"
-depends=
 depends_dev="gtk+2.0-dev libxml2-dev"
 makedepends="$depends_dev gobject-introspection-dev"
 subpackages="$pkgname-dev $pkgname-doc $pkgname-lang"
 source="https://download.gnome.org/sources/gtksourceview/${pkgver%.*}/gtksourceview-$pkgver.tar.bz2"
 
-_builddir="$srcdir/gtksourceview-$pkgver"
+builddir="$srcdir/gtksourceview-$pkgver"
 
 prepare() {
-	cd "$_builddir"
-	update_config_sub || return 1
+	default_prepare
+	update_config_sub
 }
 
 build() {
-	cd "$_builddir"
 	./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
 		--prefix=/usr \
 		--sysconfdir=/etc \
 		--localstatedir=/var \
-		--disable-static \
-		|| return 1
-	make || return 1
+		--disable-static
+	make
 }
 
 package() {
-	cd "$_builddir"
-	make DESTDIR="$pkgdir" install || return 1
+	make DESTDIR="$pkgdir" install
 }
 sha512sums="6f64acef6196bfc5953e0b148d7e460d366073b5e21367c01b01fc4d1c86ffe8aca71ecd77cf0814e47d8fc3085495f25bbbdc69e746987b02fd02fcda64886d  gtksourceview-2.10.5.tar.bz2"
