community/giblib: modernize

--- a/community/giblib/APKBUILD
+++ b/community/giblib/APKBUILD
@@ -6,20 +6,17 @@ pkgdesc="Giblib is a library that feh uses as a wrapper to imlib2"
 url="http://freshmeat.sourceforge.net/projects/giblib/"
 arch="all"
 license="MIT"
+depends_dev="imlib2-dev freetype-dev zlib-dev libx11-dev libxext-dev"
+makedepends="$depends_dev"
 subpackages="$pkgname-doc $pkgname-dev"
-makedepends="imlib2-dev libxext-dev libx11-dev freetype-dev zlib-dev"
 source="http://kent.dl.sourceforge.net/project/slackbuildsdirectlinks/giblib/giblib-$pkgver.tar.gz"
 
-depends_dev="imlib2-dev freetype-dev zlib-dev libx11-dev libxext-dev"
-
 prepare() {
-	cd "$builddir"
 	update_config_sub
 	default_prepare
 }
 
 build() {
-	cd "$builddir"
 	./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
@@ -29,12 +26,10 @@ build() {
 }
 
 check() {
-	cd "$builddir"
 	make check
 }
 
 package() {
-	cd "$builddir"
 	make DESTDIR="$pkgdir" docsdir=/usr/share/doc/giblib install
 	install -Dm644 COPYING $pkgdir/usr/share/licenses/$pkgname/COPYING
 }
