main/pekwm: fix build

--- a/main/pekwm/APKBUILD
+++ b/main/pekwm/APKBUILD
@@ -3,12 +3,19 @@ pkgname=pekwm
 pkgver=0.1.17
 pkgrel=4
 pkgdesc="Fast & Light Window Manager"
-url="http://pekwm.org/projects/pekwm"
+url="https://github.com/pekdon/pekwm"
 arch="all"
 license="GPL-2.0-or-later"
-makedepends="libx11-dev libpng-dev libxpm-dev libxrender-dev libxrandr-dev"
+makedepends="libx11-dev libpng-dev libxpm-dev libxrender-dev libxrandr-dev
+	automake autoconf libtool"
 subpackages="$pkgname-doc"
-source="https://launchpad.net/ubuntu/+archive/primary/+files/pekwm_$pkgver.orig.tar.bz2"
+source="$pkgname-$pkgver.tar.gz::https://github.com/pekdon/pekwm/archive/release-$pkgver.tar.gz"
+builddir="$srcdir/pekwm-release-$pkgver"
+
+prepare() {
+	default_prepare
+	autoreconf -fi
+}
 
 build() {
 	./configure \
@@ -25,4 +32,4 @@ package() {
 	make DESTDIR="$pkgdir" install
 }
 
-sha512sums="fa4c95ddc7e17f737b4e90f32258a79bf2a0abe96a2ab1a4166b1aa6832ff7a978116d224c98c31a4b33444b3c59e9ecd6095ca062d8a65f0f6174803f5b0811  pekwm_0.1.17.orig.tar.bz2"
+sha512sums="1950888402f11c5cd72c9d82de976c472d4a0443da206629a039d19a1729660fd7cd09535d35984d554dcdb366918d9e29536b1272521f36f7e54499df0c14af  pekwm-0.1.17.tar.gz"
