community/qt5-qtspeech: disable on armhf

--- a/community/qt5-qtspeech/APKBUILD
+++ b/community/qt5-qtspeech/APKBUILD
@@ -5,7 +5,7 @@ pkgver=5.14.1
 pkgrel=0
 pkgdesc="Qt module to make text to speech and speech recognition easy"
 url="https://qt.io"
-arch="all"
+arch="all !armhf" # armhf blocked by qt5-qtdeclarative
 license="(LGPL-2.0-or-later OR GPL-3.0-only OR GPL-2.0-or-later) AND Qt-GPL-exception-1.0"
 depends="qt5-qtmultimedia"
 makedepends="qt5-qtbase-dev"
